parser/tests/bad/arr01-1.st
% lower bound of an 'array' must be determined at compile-time
%   identifier

var lowerBound: int
var arr: array lowerBound..2 of int
